# SimpleSFT

./: .gitignore  README.md  pyproject.toml
benchmark_artifacts/_cleaned_corpus/: phase_aligned_report_latest.md  phase_aligned_report_latest.tex
docs/: developer_iteration_guide.md  qwen25_05b_calibration.md  qwen25_15b_calibration.md  qwen25_zero2_calibration.md
estimator_report/: Makefile  README.md  main.tex
estimator_report/sections/: 01_intro.tex  02_resident_activation.tex  03_workspace_phase.tex
scripts/: precompute_model_specs.py  refresh_model_catalog.py  report_phase_aligned_calibration.py  run_sft.py
src/simplesft/: __init__.py  activation_model.py  allocator_model.py  artifacts.py  attribution.py  benchmark.py  cli.py  compare.py  constants.py  corpus_cleaning.py  distributed_common.py  distributed_measure.py  distributed_zero2_measure.py  estimate.py  inspect.py  interpretable_estimate.py  measure.py  optimizer_model.py  parallelism_model.py  phase_model.py  rebuild.py  reporting.py  resident_state_model.py  runtime.py  search.py  sft_auto_format.py  sft_trainer.py  topology.py  types.py  utils.py  web_assets.py  web_server.py  (+2 more)
tests/: test_allocator_model.py  test_architecture_support.py  test_artifacts.py  test_attribution.py  test_benchmark.py  test_compare_search.py  test_corpus_cleaning.py  test_distributed_entrypoints.py  test_distributed_measure.py  test_estimate.py  test_export.py  test_measure.py  test_model_catalog.py  test_precomputed_model_specs.py  test_rebuild.py  test_reporting.py  test_runtime.py  test_topology.py  test_web_server.py
(+35 files in other folders)
